fixing the productDetails width on mobile screen

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -134,3 +134,11 @@ html,body{
   background-color: #333;
   box-shadow: 30px 0 0 #6a6a6a;
 }
+
+@media (max-width: 540px) {
+  .css-xvmtfx-MuiTypography-root , .css-165vnc4-MuiTypography-root{
+    width:100% !important;
+  }
+  
+}
+
